--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  background-color: #242424;
+/*  background-color: #242424;
   color: rgb(255 255 255 / 87%);
   color-scheme: light dark;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -10,7 +10,11 @@
   font-weight: 400;
   line-height: 24px;
   text-rendering: optimizelegibility;
-  text-size-adjust: 100%;
+  text-size-adjust: 100%;*/
+  background-image: url('./assets/background_sunrise.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #root {
@@ -30,12 +34,8 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  display: flex;
-  margin: 0;
-  min-height: 100vh;
-  min-width: 320px;
-  place-items: center;
+body, html {
+  height: 100%;
 }
 
 h1 {
